@@ -2,18 +2,22 @@
 #include <X11/Xatom.h>
 #include <gdk/gdkx.h>
 
-static Atom qtcNetMoveResize;
-static Atom qtcMenuSize;
-static Atom qtcActiveWindow;
-static Atom qtcActiveWindow;
-static Atom qtcTitleBarSize;
+static Atom qtcNetMoveResizeAtom;
+static Atom qtcMenuSizeAtom;
+static Atom qtcActiveWindowAtom;
+static Atom qtcActiveWindowAtom;
+static Atom qtcTitleBarSizeAtom;
+static Atom qtcToggleMenuBarAtom;
+static Atom qtcToggleStatusBarAtom;
 
 static void qtcCreateAtoms()
 {
     Display *dpy=gdk_x11_get_default_xdisplay();
 
-    qtcNetMoveResize=XInternAtom(dpy, "_NET_WM_MOVERESIZE", False);
-    qtcMenuSize=XInternAtom(dpy, MENU_SIZE_ATOM, False);
-    qtcActiveWindow=XInternAtom(dpy, ACTIVE_WINDOW_ATOM, False);
-    qtcTitleBarSize=XInternAtom(dpy, TITLEBAR_SIZE_ATOM, False);
+    qtcNetMoveResizeAtom=XInternAtom(dpy, "_NET_WM_MOVERESIZE", False);
+    qtcMenuSizeAtom=XInternAtom(dpy, MENU_SIZE_ATOM, False);
+    qtcActiveWindowAtom=XInternAtom(dpy, ACTIVE_WINDOW_ATOM, False);
+    qtcTitleBarSizeAtom=XInternAtom(dpy, TITLEBAR_SIZE_ATOM, False);
+    qtcToggleMenuBarAtom=XInternAtom(dpy, TOGGLE_MENUBAR_ATOM, False);
+    qtcToggleStatusBarAtom=XInternAtom(dpy, TOGGLE_STATUSBAR_ATOM, False);
 }
