@@ -19,7 +19,8 @@
  9. Always use a 1 pixel border for toolbars - as using a border of 0 can cause
     items of adjoining locked toolbars to be too close.
 10. Add separator to messafge dialog boxes - matches KDE.
-    
+11. Add option to act upon titlebar buttons to hide menubar and statusbars.
+
 1.3.0
 -----
  1. Add option to use kwin titlebar colours as menubar shade.
